2007-07-21  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed some bugs:
	any as_object should have addProperty member,
	broadcastMessage can have parameters,
	properly to pass this_ptr to event handler,
	text fields can serve as container 
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_as_classes/as_broadcaster.cpp
	* gameswf/gameswf_object.cpp
	* gameswf/gameswf_object.h
	* gameswf/gameswf_text.cpp
	* gameswf/gameswf_text.h

2007-07-19  Vitaly Alexeev <tishka92@yahoo.com>

	Plugin handling
	* gameswf/gameswf.h
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_action.h
	* gameswf/gameswf_object.cpp
	* gameswf/gameswf_object.h
	* gameswf/gameswf_plugin.h
	* gameswf/plugins/sample/sample.cpp
	* gameswf/plugins/sample/sample.h
	* gameswf/plugins/sample/test.fla
	* gameswf/plugins/sample/test.swf
	* gameswf/plugins/sample/win32/sample.vcproj

2007-07-19  Vitaly Alexeev <tishka92@yahoo.com>

	Added missing gameswf_plugin.h,
	added struct plugin_object that is the bridge between core of gameswf
	and the plugin,
	added plugin_value that is common for gameswf & plugin and is used to
	pass data to/from plugin
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_as_classes/as_color.cpp
	* gameswf/gameswf_as_classes/as_table.cpp
	* gameswf/gameswf_object.cpp
	* gameswf/gameswf_object.h
	* gameswf/gameswf_plugin.h
	* gameswf/gameswf_value.cpp
	* gameswf/gameswf_value.h
	* gameswf/plugins/sample/sample.cpp
	* gameswf/plugins/sample/test.fla
	* gameswf/plugins/sample/test.swf
	* gameswf/plugins/sample/win32/sample.vcproj
	* gameswf/win32/VC8/gameswf.vcproj

2007-07-17  Vitaly Alexeev <tishka92@yahoo.com>

	tweak_ptr ==> smart_ptr, we should protect active entity from deleting,
	on_event() may delete it
	* gameswf/gameswf_root.h

2007-07-17  Vitaly Alexeev <tishka92@yahoo.com>

	The supporting of loadable plugins is added (unimplemented for now)
	* base/tu_loadlib.cpp
	* base/tu_loadlib.h
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_action.h
	* gameswf/gameswf_as_sprite.cpp